switch to Author::ALEXBIO dzil bundle

--- a/dist.ini
+++ b/dist.ini
@@ -5,23 +5,4 @@ license = Perl_5
 copyright_holder = Alessandro Ghedini
 copyright_year   = 2011
 
-[@Basic]
-[@GitHub]
-
-[MetaConfig]
-[MetaJSON]
-
-[AutoPrereqs]
-
-[PodVersion]
-[PkgVersion]
-
-[ChangelogFromGit]
-tag_regexp = ^v
-file_name   = Changes
-
-[Git::Tag]
-tag_message = %N %v
-
-[Git::Push]
-
+[@Author::ALEXBIO]
