--- a/dist.ini
+++ b/dist.ini
@@ -5,5 +5,5 @@ copyright_holder = Alessandro Ghedini
 copyright_year   = 2011
 
 [@Author::ALEXBIO]
-repo         = p5-App-gist
+repo         = gist
 pod_coverage = 0
